Fix alert modal spacing

--- a/packages/styles/scss/components/_modal.scss
+++ b/packages/styles/scss/components/_modal.scss
@@ -233,7 +233,7 @@ $modal-tiny-width: em(288) !default;
 	// for vertically displayed buttons
 	&.flex-column {
 		[class*='button'] + [class*='button'] {
-			margin-top: 0.75em;
+			margin-top: 0.5em;
 		}
 	}
 }
